# tgbot_tcf

./: .gitignore  .replit  AGENTS.md  Dockerfile  LICENSE  PLAN.md  PROMPT.md  README.md  affiliate.py  config.env  config.env.example  docker-compose.yml  pyproject.toml  replit.md  requirements.txt
.github/workflows/: codeql.yml  run-bot.yml  run-tdd.yml  verification.yml
agents/: CLAUDE.md  REPLIT.md  RULES.md  STYLE-CODE.md  STYLE-COMMENTS.md  WORKFLOW.md
attached_assets/: PRD-1_1777630693458.md  PROMPT_1777461694125.md  PROMPT_1777465693194.md  REPLIT_1777465693479.md  RULES_1777465693385.md
docs/: agent-guidelines.md  architecture.md  development.md  index.md  modules.md  workflows.md
tcbot/: __init__.py  __main__.py  alive.py  config.py
tcbot/agents/: BAN_ENFORCER.md  BROADCAST.md  GROUP_HEALTH.md  MEMBER_TRACKER.md  NOTIFY.md  SWEEP.md  __init__.py  ban_enforcer.py  broadcast_agent.py  group_health.py  member_tracker.py  notify_agent.py  sweep.py
tcbot/database/: __init__.py  admins_db.py  bans_db.py  cache.py  documents.py  groups_db.py  joins_db.py  kicks_db.py  mongos.py  mutes_db.py  queues_db.py  roles_db.py  users_db.py  (+1 more)
tests/: conftest.py  test_admins_mod.py  test_appeals_pure.py  test_ban_flow.py  test_bans_db.py  test_config_parse.py  test_decorators.py  test_format.py  test_keyboards.py  test_log_templates.py  test_messages.py  test_prefix.py  test_python_3_12_3_13.py  test_python_version_features.py  test_rate_limiter.py  test_targets.py  test_users_resolver.py  test_warns_db.py
tgbot_tcf/: __init__.py  __main__.py  config.py  keepalive.py
(+108 files in other folders)
