[project]
name = "tgbot-tcf"
version = "1.0.0"
description = "Transsion Core Federation (TCF) Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]==22.5",
    "motor>=3.7.1",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.12",
    "email-validator>=2.3.0",
    "gunicorn>=25.3.0",
]
