[project]
name = "tgbot-tcf"
version = "1.0.0"
description = "Transsion Core Federation (TCF) Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]==22.5",
    "motor>=3.7.1",
    "flask>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
